# plant-care-project

./: .gitignore  README.md  analyze_video.py  前后端.txt
.cursor/: mcp.json
plant-care-backend/: .env  .env.example  auth.py  database.py  main.py  models.py  requirements.txt  schemas.py  token.txt
plant-care-backend/routers/: auth_router.py  chat_router.py  encyclopedia_router.py  plant_router.py  user_router.py
plant-care-backend/services/: weather_service.py  zhipu_service.py
plantagent/: README.md  pyproject.toml  requirements-runtime.txt  requirements.txt  test_supabase.py
plantagent/data/: knowledge.md
plantagent/data/chroma_knowledge/: chroma.sqlite3
plantagent/scripts/: build_index.py  dignore.py  rag_chat.py
plantagent/src/plantagent/: __init__.py
plantagent/src/plantagent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
plantagent/src/plantagent/config/: __init__.py  rag_settings.py
plantagent/src/plantagent/rag/: __init__.py  index_builder.py  rag_chat.py  service.py  supabase_context.py
plantagent/src/plantagent/tools/: supabase_tools.py
plantsense-app/: app.json  package-lock.json  package.json
plantsense-app/app/: _layout.tsx  add-plant.tsx  city-picker.tsx  diagnosis-result.tsx  expert-chat.tsx  garden-plant-detail.tsx  light-meter.tsx  plant-detail.tsx  prediction.tsx  profile.tsx
plantsense-app/components/: AppHeader.tsx  PressableCard.tsx  SectionTitle.tsx
plantsense-app/constants/: index.ts
plantsense-app/data/: plants.ts
plantsense-app/services/: api.ts  secureStorage.ts  supabaseClient.ts
(+22 files in other folders)
